#25 HTML / CSS prototype page
Basis layout, begin styleguide toepassingen, nog niet af! Ben nog bezig met css verbeteren, nieuwe technieken toepassen )zoals progress element) en IMG inladen. Staat ook nog niet in juiste file

Is een mock-up voor als we de data hebben, dan kan deze op de juiste plekken worden ingeladen.

--- a/src/lib/css/styleguide.css
+++ b/src/lib/css/styleguide.css
@@ -69,6 +69,7 @@ body {
 
     /* background color */
     --background-color-primary: hsl(0, 0%, 100%);
+    --background-color-secondary: hsl(0, 0%, 91%);
 
     /* text colors */
     --main-text-color: var(var(--grey-700));
