--- a/src/lib/css/styleguide.css
+++ b/src/lib/css/styleguide.css
@@ -5,8 +5,8 @@
 
 
 @font-face {
-    font-family: 'MontserratRegular';
-    src: url(/src/lib/assets/fonts/Montserrat-VariableFont_wght.ttf);
+    font-family: 'DM sans';
+    src: url(/src/lib/assets/fonts/DMSans-VariableFont_opsz\,wght.ttf);
 }
 
 
@@ -18,7 +18,7 @@ body {
 
 
 body {
-    --main-font: 'MontserratRegular';
+    --main-font: 'DM sans';
 
 
     /* ----colors------ */
