--- a/src/lib/css/styleguide.css
+++ b/src/lib/css/styleguide.css
@@ -12,7 +12,7 @@
 
 html,
 body {
-    font-family: var(--main-font), sans-serif;
+    font-family: var(--main-font), 'sans-serif';
     background-color: var(--background-color-primary);
 }
 
