--- a/src/lib/css/styleguide.css
+++ b/src/lib/css/styleguide.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
@@ -15,6 +16,9 @@ html,
 body {
     font-family: var(--main-font), 'sans-serif';
     background-color: var(--background-color-primary);
+
+
+    
 }
 
 body {
