#102 Verbeteringen aan navigatie componenten
Verbeteringen aan navigatie, hover animaties gefixt, rotate animatie gevoegd aan de collapse icon en padding toegevoegd aan de mobile menu items

--- a/src/lib/css/styleguide.css
+++ b/src/lib/css/styleguide.css
@@ -75,6 +75,7 @@ body {
     /* SVG Colors */
     --main-svg-icon-color:hsl(213, 4%, 55%);
     --secondary-svg-icon-color:hsl(256, 85%, 63%);
+    --secondary-svg-icon-hover-color:hsl(256, 85%, 90%);
 }
 body{
     background:var(--grey-100) ;
